--- a/Semester 5/Software Construction Development/readme
+++ b/Semester 5/Software Construction Development/readme
@@ -1,1 +1,11 @@
+# Software Construction and Development
+
+Java in Depth - Software Construction and Development
+This repository contains resources for learning about software construction and development using Java. Topics covered include:
+
+File Handling
+Collections(HashMap, ArrayList,etc)
+JUnit Testing
+Data Structure (Stack,Queue,Arrays)
+
 
